--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>2017春晖中学高二(11)班豪华版抽签器</title>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/animate.css"/>
     <script src="js/lib/jquery-1.12.4.min.js"></script>
     <script src="js/lib/common.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/autozoom.js"></script>
 </head>
 <body>
 <div>
