一堆改进（精益求精）
  - 是否每次抽取后把人数框清空
  - 去掉跳动的文本框的外框
  - 用unselectable="on"来去掉文本框的光标
  - 开始按钮后显示剩余人数

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div></div>
     </header>
     <section>
-        <div class="hide" id="luckyDrawing"><input id="showName" readonly type="text"></div>
+        <div class="hide" id="luckyDrawing"><input id="showName" readonly unselectable="on" type="text"></div>
+        <!--PillarsZhang:用unselectable="on"来去掉文本框的光标-->
         <div class="hide" id="result">
             <div></div>
         </div>
