--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/animate.css"/>
     <script src="js/lib/jquery-1.12.4.min.js"></script>
     <script src="js/lib/common.js"></script>
+    <script src="js/settings.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/autozoom.js"></script>
+    <script src="js/autozoom.js"></script>  
 </head>
 <body>
 <div>
@@ -19,7 +20,7 @@
         <div class="hide" id="luckyDrawing"><input id="showName" readonly unselectable="on" type="text"></div>
         <!--PillarsZhang:用unselectable="on"来去掉文本框的光标-->
         <div class="hide" id="result">
-            <div></div>
+            <div>准备就绪</div>
         </div>
     </section>
     <footer>
