添加一个“准备就绪”文字（改了好多诶）
顺便优化了一下界面细节和BUG

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <div class="hide" id="luckyDrawing"><input id="showName" readonly unselectable="on" type="text"></div>
         <!--PillarsZhang:用unselectable="on"来去掉文本框的光标-->
         <div class="hide" id="result">
-            <div>准备就绪</div>
+            <div>
+                <font size="10">准备就绪</font>
+            </div>
         </div>
     </section>
     <footer>
