--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>2017春晖中学高二(11)班豪华版抽签器</title>
+    <title>2018 HR Vision 問卷抽獎</title>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/animate.css"/>
     <script src="js/lib/jquery-1.12.4.min.js"></script>
@@ -21,14 +21,15 @@
         <!--PillarsZhang:用unselectable="on"来去掉文本框的光标-->
         <div class="hide" id="result">
             <div>
-                <font size="10">准备就绪</font>
+                <font size="10">Ready</font>
             </div>
         </div>
     </section>
     <footer>
-        <div><input type="number" id="txtNum" value="" placeholder="请输入中奖人数">
-            <button id="btnStart">开始</button>
+        <div><input type="number" id="txtNum" value="" placeholder="請輸入中獎人數">
+            <button id="btnStart">開始</button>
             <button id="btnReset">&nbsp;</button>
+            <button id="btnImport">&nbsp;</button>
         </div>
     </footer>
 
