--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 
 </div>
 <div id="bgLuckyDrawEnd"></div>
+<!--
 <div id="iconDiv" class="animated fadeIn"><span><img src="css/img/icon/01.png"> </span><span><img
         src="css/img/icon/02.png"> </span><span><img src="css/img/icon/03.png"> </span><span><img
         src="css/img/icon/04.png"> </span><span><img src="css/img/icon/05.png"> </span><span><img
-        src="css/img/icon/06.png"> </span></div>
+        src="css/img/icon/06.png"> </span></div>-->
 </body>
 </html>
