Add excel importer
Use XLSX to parser data and combine string

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/settings.js"></script>
     <script src="js/index.js"></script>
     <script src="js/autozoom.js"></script>  
+    <script type="text/javascript" src="http://oss.sheetjs.com/js-xlsx/xlsx.full.min.js"></script>
 </head>
 <body>
 <div>
@@ -30,6 +31,7 @@
             <button id="btnStart">開始</button>
             <button id="btnReset">&nbsp;</button>
             <button id="btnImport">&nbsp;</button>
+            <input id="select_file" type="file" />
         </div>
     </footer>
 
