Update excel js path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/settings.js"></script>
     <script src="js/index.js"></script>
     <script src="js/autozoom.js"></script>  
-    <script type="text/javascript" src="http://oss.sheetjs.com/js-xlsx/xlsx.full.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.2/xlsx.full.min.js"></script>
 </head>
 <body>
 <div>
