--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>2019 HR Vision 大會抽獎</title>
+    <title>2020 人才管理實戰論壇 大會抽獎</title>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/animate.css"/>
     <script src="js/lib/jquery-1.12.4.min.js"></script>
