--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>2020 人才管理實戰論壇 大會抽獎</title>
+    <title>MAYO 2021用戶大會</title>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/animate.css"/>
     <script src="js/lib/jquery-1.12.4.min.js"></script>
@@ -14,6 +14,12 @@
 </head>
 <body>
 <div>
+    <script type="text/javascript">
+        $('#search_input')
+        .keydown(function(event){
+        alert(event.keyCode);
+        })
+    </script>
     <header>
         <div></div>
     </header>
